src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_53_WithStyle.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
    <DockPanel.Resources>        
        <Style xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" TargetType="{x:Type Button}">
            <Setter Property="Template">
            <Setter.Value>
            <ControlTemplate TargetType="{x:Type Button}">
                                        <TextBlock Name="hi there" Text="{Binding }" />
            </ControlTemplate>
            </Setter.Value>
            </Setter>
        </Style>
    </DockPanel.Resources>
    
</DockPanel>
</Page>
